# y2k38-checker

./: .Dockerfile  .gitignore  CMakeLists.txt  LICENCE  README.md  run_all.py  run_all.sh  show_analyzed.py
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
checker/check-script/: Cargo.toml
checker/check-script/src/: main.rs
checker/clang-analyzer/: CMakeLists.txt  README.md
checker/clang-analyzer/lib/: CMakeLists.txt  absoluteFilePath.cpp  isTimeTEquivalent.cpp
checker/clang-analyzer/test/: test.py
checker/clang-query/blacklist/: write-fs-timestamp.matcher
checker/clang-query/downcast-bug/: exp-downcast.matcher  func-arg-imp-downcast.matcher  imp-downcast.matcher  return-imp-downcast.matcher
checker/reporter/: Cargo.toml
clang-analyzer/: README.md  analyzed.json  compile_commands.json
clang-analyzer/lib/: CMakeLists.txt  absoluteFilePath.cpp  outputFileOption.cpp  writeJsonFile.cpp  writeJsonFile.h
clang-analyzer/test/: CMakeLists.txt  files.c  functions.c  path.py
clang-analyzer/tools/: CMakeLists.txt
clang-analyzer/tools/check-y2k38/: CMakeLists.txt  main.cpp
clang-query/: README.md  explicitly-cast.c  fs-y2k38-checker.sh  implicitly-cast.c  read-bug.c  read-bug.cq  test.c  test.sh  write-timestamp.c  write-timestamp.md
clang-query/blacklist/: read-fs-timestamp.matcher
clang-query/downcast-bug/: assign-imp-downcast.c  assign-imp-downcast.matcher  exp-downcast-bug.c  exp-downcast-bug.matcher  func-arg-imp-downcast.c  func-arg-imp-downcast.matcher  memo.md  return-imp-downcast.c  return-imp-downcast.matcher
clang-query/read-bug/: read-bug.c  read-bug.matcher
clang-query/write-bug/: write-bug.c  write-bug.matcher
cmake/modules/: FindClang.cmake
dataset/blacklist/: read-fs-timestamp.c  write-fs-timestamp.c
dataset/downcast-bug/: assign-imp-downcast.c  exp-downcast.c  func-arg-imp-downcast.c  return-imp-downcast.c
inv-ipsj/: .env  README.md
inv-ipsj/analysis/: analyze_all.py  create_compile_commands_json.py
inv-ipsj/analyze/: analyze.py  fix_file_count.py  main.py
inv-ipsj/log/: analysis.csv  analysis_detail.csv  snippets.py
inv-ipsj/set_compile_commands_json/: create_compile_commands_json.py  dirs1.py  dirs2.py  main.py  unzip.py
inv-ipsj/set_repository/: download_repo_zip.py  fetch_repo_list.sh  unzip_all.sh
investigation/: README.md  download-zip.py  preprocess.py  relace_dir_name_space.py  setting.py
investigation/dicomo/: README.md  url.txt
investigation/ipsj-embedded/: add-loc.py
lib/: CMakeLists.txt
lib/stat/: CMakeLists.txt
lib/stat-checker/: CMakeLists.txt  CheckStatAction.cpp  CheckStatAction.h
log/: 2023-05-21-16:06:22__timet_to_int_timet判定あり  2023-05-21-16:16:12__timet_to_long_timet判定あり  2023-05-21-17:01:04__timet_to_long_timet判定なし
src/lib/: CMakeLists.txt
src/tools/: CMakeLists.txt
test/: CMakeLists.txt  functions.c  stat.c
tools/: CMakeLists.txt
tools/check-stat/: CMakeLists.txt  main.cpp
web/docs/: openapi.yaml
(+138 files in other folders)
